--- a/.github/workflows/swiftpm.yml
+++ b/.github/workflows/swiftpm.yml
@@ -19,4 +19,5 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
+      env: MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
       run: swift test -v
