--- a/.github/workflows/swiftpm.yml
+++ b/.github/workflows/swiftpm.yml
@@ -12,12 +12,17 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: ios-latest
 
     steps:
     - uses: actions/checkout@v4
     - name: Build
       run: swift build -v
     - name: Run tests
-      env: MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
-      run: swift test -v
+      env: 
+          MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
+      run: swift test --enable-code-coverage
+   - name: Upload coverage to Codecov
+      env: 
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      uses: codecov/codecov-action@v1.2.1
