--- a/.github/workflows/swiftpm.yml
+++ b/.github/workflows/swiftpm.yml
@@ -5,9 +5,9 @@ name: Swift
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*", "fix/*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*", "fix/*" ]
 
 jobs:
   build:
