--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -5,9 +5,9 @@ name: Swift
 
 on:
   push:
-    branches: [ "main", "feature/*", "fix/*" ]
+    branches: [ "main", feature/*, fix/* ]
   pull_request:
-    branches: [ "main", "feature/*", "fix/*" ]
+    branches: [ "main", feature/*, fix/* ]
 
 jobs:
   build:
