Run tests for pull requests only

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -4,8 +4,8 @@
 name: Swift
 
 on:
-  push:
-    branches: [ "main", feature/*, fix/* ]
+#  push:
+#    branches: [ "main", feature/*, fix/* ]
   pull_request:
     branches: [ "main", feature/*, fix/* ]
 
