--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,11 +19,12 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      env: MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
+      env: 
+        MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
       run: swift test --enable-code-coverage
     - name: Upload coverage to Codecov
       env: 
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       # uses: codecov/codecov-action@v1.2.1
       run: |
         # Replace `linux` below with the appropriate OS
