--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -25,10 +25,11 @@ jobs:
     - name: Upload coverage to Codecov
       env: 
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      # uses: codecov/codecov-action@v1.2.1
-      run: |
+      uses: codecov/codecov-action@v1.2.1
+      # run: |
         # Replace `linux` below with the appropriate OS
         # Options are `alpine`, `linux`, `macos`, `windows`
-        curl -Os https://cli.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
+      #  curl -Os https://cli.codecov.io/latest/linux/codecov
+      #  chmod +x codecov
+      #  ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
+
