Test: Use codecov for code coverage report (#6)
* Use codecov for code coverage report

* Update workflow for feature and fix branches

* Rename workflow from swiftpm to codecov

* Rollback to run on macos-latest

* Update branches

* Add run scripts for code coverage

* Use 'run' key for code coverage instead of 'uses' key

* Run tests for pull requests only

* Update env for the step of test

* Update syntax for the key of env

* Run again

* Remove unused settings

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -4,10 +4,8 @@
 name: Swift
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", feature/*, fix/* ]
 
 jobs:
   build:
@@ -19,5 +17,10 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      env: MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
-      run: swift test -v
+      env: 
+        MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
+      run: swift test --enable-code-coverage
+    - name: Upload coverage to Codecov
+      env: 
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      uses: codecov/codecov-action@v1.2.1
