Add a step to collect coverage report

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,6 +22,8 @@ jobs:
       env: 
         MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
       run: swift test --enable-code-coverage
+    - name: Collect coverage report
+      run: bash <(curl -s https://codecov.io/bash) -J 'MusixmatchAPI'
     - name: Upload coverage to Codecov
       env: 
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
