Test: run the codecov script to upload code coverage reports (#9)
* Rebase to main branch

* Rollback to run on macos-latest

* run the codecov script to upload code coverage reports

* Add a step to collect coverage report

* Use github action Swift Coverage Conversion

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,7 +22,9 @@ jobs:
       env: 
         MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
       run: swift test --enable-code-coverage
+    - name: Swift Coverage Conversion
+      uses: sersoft-gmbh/swift-coverage-action@v4.0.0
     - name: Upload coverage to Codecov
       env: 
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      uses: codecov/codecov-action@v1.2.1
+      run: bash <(curl -s https://codecov.io/bash) -J '^MusixmatchAPI$'
