Update project config for codecov

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Upload coverage to Codecov
       env: 
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      run: bash <(curl -s https://codecov.io/bash) -J '^MusixmatchAPI$'
+      run: bash <(curl -s https://codecov.io/bash) -J 'MusixmatchAPI'
