--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -23,7 +23,7 @@ jobs:
         MUSIXMATCH_APIKEY: ${{ secrets.MUSIXMATCH_APIKEY }}
       run: swift test --enable-code-coverage
     - name: Swift Coverage Conversion
-      uses: sersoft-gmbh/swift-coverage-action@v4.0.0
+      run: llvm-cov export -format="lcov" .build/debug/MusixmatchAPIPackageTests.xctest -instr-profile .build/debug/codecov/default.profdata > info.lcov      
     - name: Upload coverage to Codecov
       env: 
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
